# Multi_Label_Image_Classification

./: .gitignore  README.md  app.py  dvc.yaml  kaggle.json  params.yaml  requirements.txt  requirements_dev.txt  sample_test.py  scores.json  setup.cfg  setup.py  template.py
.github/workflows/: ci.yml
configs/: config.yaml
prediction_service/: app.py
research/: ML_st_01.ipynb  st_01.ipynb  st_02.ipynb  st_03.ipynb  st_04.ipynb  st_05.ipynb  trials.ipynb
research/mlflow_dir/: example.py
research/mlflow_dir/mlruns/0/: meta.yaml
research/mlflow_dir/mlruns/0/a3ac43552abe4a9ab9479100e7c478cd/: meta.yaml
research/mlflow_dir/mlruns/0/a3ac43552abe4a9ab9479100e7c478cd/metrics/: mae  r2  rmse
research/mlflow_dir/mlruns/0/a3ac43552abe4a9ab9479100e7c478cd/tags/: mlflow.runName  mlflow.source.git.commit
src/deepClassifier/: __init__.py
src/deepClassifier/components/: __init__.py  data_ingestion.py  evaluation.py  prepare_base_model.py  prepare_callback.py  training.py
src/deepClassifier/config/: configuration.py
src/deepClassifier/entity/: __init__.py  config_entity.py
src/deepClassifier/pipeline/: stage01_data_ingestion.py  stage02_prepare_base_model.py  stage03_training.py  stage04_evaluation.py
tests/unit/: test_utils.py
