[metadata]
license = MIT
license_file = LICENSE
classifier = 
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent

[options]
install_requires =
    ensure == 1.0.2
python_requires = >= 3.7

[options.extras_require]
testing =
    pytest >= 7.1.3             # Helps to find run unit test & integration test
    mypy >= 0.971               # Helps to check whetheer typing error or not
    flake8 >= 5.0.4             # Helps to find the mistake in the codelike extra space
    tox >= 3.25.1               # Helps to create dif working env to test 
    black >= 22.8.0             # Formatiting the std python structure

[options.package_data]
deepClassifier = py.typed

[flake8]
max-line-length = 160
exclude = __init__.py

